2005-05-15  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* cronjobs/mail/mailaliases.php: [#1262] __FILE__ is used instead
	of hard-coded path.

2005-05-14  Francisco Gimeno <kikov@kikov.org>

	* www/favicon.ico: [#1271] Added favicon.ico

2005-05-13  Tom Copeland  <tom@infoether.com>

	* www/include/languages/Base.tab: Added new reporting items.
	* www/reporting/useract_graph.php: Moved some strings to Base.tab
	* www/reporting/projectact_graph.php: Moved some strings to Base.tab
	* www/reporting/siteact_graph.php: Moved some strings to Base.tab

2005-05-12  Tom Copeland  <tom@infoether.com>

	* www/include/languages/Swedish.tab: Applied patch 1253 from Lennart
	Petersson.

2005-05-12  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* www/themes/osx/images/ic/*.png: Overwritten with the same images
	from gforge theme so that background is transparent.
	[A-Z]*.png are unused legacy from SourceForge and are removed.
	* cronjobs/cvs-cron/cvs.php: syncmail line in loginfo should end
	with new line character to not break adding cvstracker line.
	(addsyncmail): Fixed test if loginfo file exists.  Use __FILE__.

2005-05-09  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* cronjobs/cvs-cron/cvs.php: Added missing closing bracket.
	* cronjobs/crontab.in: Added commented out entries for SCM
	snapshots (CVS and SVN).
	* docs/docbook/docbook/installation_guide/installation_guide.xml:
	Continued overhaul of the guide.  Only CVSTracker and SVN sections
	are not reworked yet.

2005-05-06	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Bug fixes in FRS:
		- When trying to delete a release or a package, the corresponding 
		directory didn't get deleted.
		- Wrong error message displayed when not specifying a file on a release
		creation.
	* Feature for replying mail messages sent by a tracker works now. The user
	must enter his reply between special markers.

2005-05-01  Mathieu Peltier <mathieu.peltier@gmail.com>
	* Bug fix in cvsweb cgi - "General options" panel was not working
	