@@ -9,6 +9,14 @@
  * @version   $Id$
  */
 
+// Just say no to link prefetching (Moz prefetching, Google Web Accelerator, others)
+// http://www.google.com/webmasters/faq.html#prefetchblock
+if (!empty($_SERVER['HTTP_X_moz']) && $_SERVER['HTTP_X_moz'] === 'prefetch'){
+  header($_SERVER['SERVER_PROTOCOL'] . ' 404 Prefetch Forbidden');
+  trigger_error('Prefetch request forbidden.');
+  exit;
+}
+
 if (!isset($no_gz_buffer) || !$no_gz_buffer) {
 	ob_start("ob_gzhandler");
 }
